--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,9 @@
         }
     ],
     "require": {
-        "klein/klein": "^2.1",
         "latte/latte": "^2.7",
-        "bramus/router": "^1.4"
+        "bramus/router": "^1.4",
+        "tracy/tracy": "^2.7",
+        "nette/forms": "^3.0"
     }
 }
