--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,10 @@
 		"bramus/router": "^1.4",
 		"tracy/tracy": "^2.7",
 		"nette/forms": "^3.0"
+	},
+	"autoload": {
+		"psr-4": {
+			"App\\": "app/"
+		}
 	}
 }
