--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 	"require": {
 		"latte/latte": "^2.7",
 		"bramus/router": "^1.4",
-		"tracy/tracy": "^2.7",
+		"tracy/tracy": "^2.7"
 	},
 	"autoload": {
 		"psr-4": {
